--- a/assets/css/podify-events.css
+++ b/assets/css/podify-events.css
@@ -36,6 +36,7 @@
   transition: transform .2s ease, box-shadow .2s ease;
   margin: 0;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  height: 100%;
 }
 
 .podify-event-card:hover {
@@ -111,6 +112,10 @@
   flex: 1 1 auto;
 }
 
+.event-actions {
+    margin-top: auto;
+}
+
 .event-title {
   margin: 0 0 14px;
   font-size: 22px;
@@ -144,6 +149,7 @@
   font-size: 14px;
   color: #000000;
   line-height: 1.4;
+  min-height: 20px;
 }
 
 .podify-event-meta .meta-item .dashicons {
@@ -155,6 +161,7 @@
   font-size: 18px;
   line-height: 18px;
   color: #4B388F;
+  flex-shrink: 0;
 }
 
 .podify-event-meta .meta-item .meta-text {
@@ -184,6 +191,7 @@
   border-radius: 28px;
   padding: 10px 16px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+  width: fit-content;
 }
 
 .podify-read-more:after {
